# Project_Travelling_Stones

./: Dockerfile-dev.django  Dockerfile-prod.django  Dockerfile.vue  README.md  backup.sh  docker-compose.dev.yml  docker-compose.prod.yml  init.sh  package-lock.json  package.json  requirements.txt
Interface_Calloux/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Interface_Calloux/src/: ApiAxios.ts  App.vue  http-common.ts  http-login.ts  main.ts  maintenance.ts
Interface_Calloux/src/assets/: main.css
Interface_Calloux/src/components/: Footer.vue  Header.vue
Interface_Calloux/src/router/: index.ts
Interface_Calloux/src/views/: CallouxMapView.vue  CallouxRedirect.vue  CallouxView.vue  DecouverteRedirect.vue  DecouverteView.vue  HomeView.vue  LoginView.vue  MaintenanceView.vue  Personne.vue
Web_rest_api/: .pre-commit-config.yaml  manage.py  populate.py  setMaintenance.py  setup.cfg  test_api.sh
Web_rest_api/Web_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
Web_rest_api/travelling_stones/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Web_rest_api/travelling_stones/migrations/: 0001_initial.py
conf.d/: Caddyfile  default.conf  prod.conf
