[options]
python_requires = >=3.6
packages = find:
# When the django-admin.py deprecation ends, remove "scripts".
scripts = django/bin/django-admin.py
include_package_data = true
zip_safe = false
install_requires =
    asgiref >= 3.3.2, < 4
    pytz
    sqlparse >= 0.2.2


[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119


[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
